cambio en header y footer

--- a/vistas/clientes.html
+++ b/vistas/clientes.html
@@ -38,57 +38,22 @@
             </ul>
           </div>
         </div>
-      </nav>   
+    </nav>   
+    <script src="./header.js"></script>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <script src="./footer.js"></script>
 
-    <div class="principal-div text-center" >
-        <br><br>
-        <h1 class="display-1">Hospital</h1>
-        <h2 class="display-5">Universidad de El Salvador</h2>
-        <br>
-        <button type="button" class="btn btn-dark "><a class="nav-link" href="somos.html">Quienes Somos</a></button>
-        <br>
-        <br>
-    </div>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <footer class="text-center text-white" style="background-color: #f1f1f1;">
-        <div class="container pt-4">
-            <section class="mb-4 d-flex justify-content-center">
-                <a class="nav-link d-inline-block me-3" href="https://www.facebook.com/UESoficial.SV">
-                    <img src="../recursos/fontawesome/svgs/brands/facebook.svg" alt="Facebook" class="img-fluid" width="15" height="15">
-                </a>
-                <a class="nav-link d-inline-block me-3" href="https://twitter.com/UESoficial">
-                    <img src="../recursos/fontawesome/svgs/brands/x-twitter.svg" alt="twitter" class="img-fluid" width="15" height="15">
-                </a>
-                <a class="nav-link d-inline-block me-3" href="https://www.instagram.com/uesoficial?igsh=MTdxcjVuaG5wOGt2Zg==">
-                    <img src="../recursos/fontawesome/svgs/brands/instagram.svg" alt="instagram" class="img-fluid" width="15" height="15">
-                </a>
-                <a class="nav-link d-inline-block me-3" href="https://sv.linkedin.com/school/universidad-de-el-salvador/">
-                    <img src="../recursos/fontawesome/svgs/brands/linkedin.svg" alt="linkedin" class="img-fluid" width="15" height="15">
-                </a>
-                <a class="nav-link d-inline-block me-3" href="https://wa.me/72516892?text=Hola">
-                    <img src="../recursos/fontawesome/svgs/brands/whatsapp.svg" alt="whatsapp" class="img-fluid" width="15" height="15">
-                </a>
-            </section>
-        </div>
-        <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            <img src="../recursos/img/logoUes.png" alt="logoUes" class="img-fluid me-3" width="30" height="30">
-
-            Desarrollo de Aplicaciones Web:
-            <a class="text-dark" href="https://www.ues.edu.sv/">Universidad de El Salvador</a>
-        </div>
-    </footer>
     <script src="../recursos/bootstrap/js/bootstrap.min.js"></script>
     <script src="../recursos/fontawesome/js/fontawesome.js"></script>
     <script src="../recursos/bootstrap/css/bootstrap.min.css"></script>
