--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactanos</title>
     <link href="../recursos/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../recursos/formulario.css" rel="stylesheet">
+    <link rel="shortcut icon" href="../recursos/img/logoUes.png" />
 </head>
 <body>
     <style>
@@ -66,7 +68,6 @@
     </nav> 
     <script src="./header.js"></script>
 
-
     <div class="container">
         <br>
         <div class="row">
@@ -76,7 +77,7 @@
             <div class="col">
                 <div class="container pt-4 text-start">
                     <br><br>
-                    <h1 class="display-1">Contactanos</h1>
+                    <h1 class="display-1">Contáctanos</h1>
                     <br><br>
                     <section class="mb-4 d-flex justify-content-start">
                         <a class="nav-link d-inline-block me-3" href="https://www.facebook.com/UESoficial.SV">
@@ -104,10 +105,46 @@
     <br><br>
     <div class="container">
         <br><br>
-        <h1 class="display-4">O deja tu consulta por correo</h1>
-        <br><br>
-
     </div>
+
+    <div class="bg-contact100">
+        <div class="container-contact100">
+            <div class="wrap-contact100">
+                <div class="contact100-pic js-tilt" data-tilt>
+                    <img src="../recursos/img/mail.png" alt="IMG">
+                </div>
+                <form class="contact100-form validate-form">
+                    <span class="contact100-form-title">
+                        Déjanos tu correo
+                    </span>
+                    <div class="wrap-input100 validate-input" data-validate="Name is required">
+                        <input class="input100" type="text" name="name" placeholder="Nombre">
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+                            <i class="fa fa-user" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                    <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+                        <input class="input100" type="text" name="email" placeholder="Correo">
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                    <div class="wrap-input100 validate-input" data-validate="Message is required">
+                        <textarea class="input100" name="message" placeholder="Mensaje"></textarea>
+                        <span class="focus-input100"></span>
+                    </div>
+                    <div class="container-contact100-form-btn">
+                        <button class="contact100-form-btn">
+                            Enviar
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <br>
 
     <div class="accordion acordeon1" id="accordionExample">
         <div class="accordion-item acordeon1">
