--- a/vistas/equipo.html
+++ b/vistas/equipo.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equipo</title>
     <link href="../recursos/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="../recursos/img/logoUes.png" />
+
 </head>
 <body>
     <style>
