--- a/vistas/somos.html
+++ b/vistas/somos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quienes somos</title>
     <link href="../recursos/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="../recursos/img/logoUes.png" />
 </head>
 <body>
     <style>
