--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactanos</title>
-    <link href="../recursos/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="../recursos/formulario.css" rel="stylesheet">
     <link rel="shortcut icon" href="../recursos/img/logoUes.png" />
 </head>
@@ -103,9 +103,7 @@
         </div>
     </div>
     <br><br>
-    <div class="container">
-        <br><br>
-    </div>
+
 
     <div class="bg-contact100">
         <div class="container-contact100">
@@ -118,25 +116,25 @@
                         Déjanos tu correo
                     </span>
                     <div class="wrap-input100 validate-input" data-validate="Name is required">
-                        <input class="input100" type="text" name="name" placeholder="Nombre">
+                        <input class="input100" type="text" id="name" name="name" placeholder="Nombre" required>
                         <span class="focus-input100"></span>
                         <span class="symbol-input100">
                             <i class="fa fa-user" aria-hidden="true"></i>
                         </span>
                     </div>
                     <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                        <input class="input100" type="text" name="email" placeholder="Correo">
+                        <input class="input100" type="text" id="email" name="email" placeholder="Correo" required>
                         <span class="focus-input100"></span>
                         <span class="symbol-input100">
                             <i class="fa fa-envelope" aria-hidden="true"></i>
                         </span>
                     </div>
                     <div class="wrap-input100 validate-input" data-validate="Message is required">
-                        <textarea class="input100" name="message" placeholder="Mensaje"></textarea>
+                        <textarea class="input100" id="message" name="message" placeholder="Mensaje" required></textarea>
                         <span class="focus-input100"></span>
                     </div>
                     <div class="container-contact100-form-btn">
-                        <button class="contact100-form-btn">
+                        <button button type="submit" class="contact100-form-btn">
                             Enviar
                         </button>
                     </div>
@@ -145,6 +143,7 @@
         </div>
     </div>
     <br>
+    <div id="messageContainer"></div>
 
     <div class="accordion acordeon1" id="accordionExample">
         <div class="accordion-item acordeon1">
@@ -211,8 +210,6 @@
 
     <script src="./footer.js"></script>
 
-    <script src="../recursos/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../recursos/fontawesome/js/fontawesome.js"></script>
-    <script src="../recursos/bootstrap/css/bootstrap.min.css"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
