--- a/index.html
+++ b/index.html
@@ -4,115 +4,114 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hospital UES</title>
-    <link href="./recursos/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="shortcut icon" href="./recursos/img/logoUes.png" />
 </head>
 <body>
     <style type ="text/css">
-        .principal-div{
-            background-color: #A4C7CD;
-        }
+      .principal-div{
+          background-color: #A4C7CD;
+      }
 
-        .second-div{
-            background-color: #413C58;
-        }
+      .second-div{
+          background-color: #413C58;
+      }
 
-        .video-container {
-            position: relative;
-            padding-bottom: 56.25%; /* 16:9 ratio */
-            height: 0; 
-            overflow: hidden;
-        }
+      .video-container {
+          position: relative;
+          padding-bottom: 56.25%; /* 16:9 ratio */
+          height: 0; 
+          overflow: hidden;
+      }
 
-        .video-container video {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
+      .video-container video {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+      }
 
-        .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            opacity: 0.8;
-        }
-
+      .overlay {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          opacity: 0.8;
+      }
     </style>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-bs-theme="dark">
-        <div class="container">
-          <a class="navbar-brand" href="#">Hospital UES</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Inicio <span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./vistas/somos.html">Sobre Nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./vistas/clientes.html">Clientes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./vistas/equipo.html">Equipo</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./vistas/contacto.html">Contáctanos</a>
-                </li>
-            </ul>
-          </div>
+      <div class="container">
+        <a class="navbar-brand" href="#">Hospital UES</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                  <a class="nav-link" href="index.html">Inicio <span class="sr-only"></span></a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="./vistas/somos.html">Sobre Nosotros</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="./vistas/clientes.html">Clientes</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="./vistas/equipo.html">Equipo</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="./vistas/contacto.html">Contáctanos</a>
+              </li>
+          </ul>
         </div>
-    </nav>    
+      </div>
+    </nav>  
 
-    <div class="principal-div text-center" >
-        <br><br>
-        <h1 class="display-1">Hospital</h1>
-        <h2 class="display-5">Universidad de El Salvador</h2>
-        <br>
-        <button type="button" class="btn btn-dark "><a class="nav-link" href="./vistas/somos.html">Quienes Somos</a></button>
-        <br>
-        <br>
-    </div>     
+    <div class="principal-div text-center">
+      <br><br>
+      <h1 class="display-1">Hospital</h1>
+      <h2 class="display-5">Universidad de El Salvador</h2>
+      <br>
+      <a class="btn btn-dark" href="./vistas/somos.html" role="button">Quienes Somos</a>
+      <br><br>
+    </div>
 
     <div id="carouselExampleFade" class="carousel slide carousel-fade">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./recursos/img/1.png" class="d-block w-100" alt="1">
-          </div>
-          <div class="carousel-item">
-            <img src="./recursos/img/2.png" class="d-block w-100" alt="2">
-          </div>
-          <div class="carousel-item">
-            <img src="./recursos/img/3.png" class="d-block w-100" alt="3">
-          </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./recursos/img/1.png" class="d-block w-100" alt="1">
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>    
+        <div class="carousel-item">
+          <img src="./recursos/img/2.png" class="d-block w-100" alt="2">
+        </div>
+        <div class="carousel-item">
+          <img src="./recursos/img/3.png" class="d-block w-100" alt="3">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>    
 
     <div class="video-container position-relative">
         <video class="position-absolute top-0 start-0 w-100 h-100" src="./recursos/img/videoInicio.mp4" autoplay loop muted></video>
     </div>
     
     <div class="container text-center overlay position-relative top-50 start-50 translate-middle" style="z-index: 1;">
-        <div class="col-md-5">                                 
-            <div class="container text-start text-white bg-dark p-3">                              
-                <h1 class="display-5">Confianza y Seguridad</h1>
-                <p class="lead"> Nuestro equipo médico está compuesto por profesionales altamente calificados y dedicados que brindan atención médica de la más alta calidad a nuestros pacientes. Desde médicos y enfermeras hasta especialistas en diversas áreas de la medicina, cada miembro de nuestro equipo está comprometido con tu bienestar y seguridad. </p>
-            </div>
-        </div>
+      <div class="col-md-5">                                 
+          <div class="container text-start text-white bg-dark p-3">                              
+            <h1 class="display-5">Confianza y Seguridad</h1>
+            <p class="lead"> Nuestro equipo médico está compuesto por profesionales altamente calificados y dedicados que brindan atención médica de la más alta calidad a nuestros pacientes. Desde médicos y enfermeras hasta especialistas en diversas áreas de la medicina, cada miembro de nuestro equipo está comprometido con tu bienestar y seguridad. </p>
+          </div>
+      </div>
     </div>
 
     <div class="container">
@@ -174,11 +173,12 @@
         <br>
         <br>
         <div class="container text-end">
-            <button type="button" class="btn btn-light"><a class="nav-link" href="./vistas/equipo.html">Ver mas</a></button>
+            <button type="button" class="btn">
+              <a class="nav-link btn btn-light" href="./vistas/equipo.html">Ver mas</a>
+            </button>
         </div>
         <br>
     </div>
-
 
     <footer class="text-center text-white" style="background-color: #f1f1f1;">
         <div class="container pt-4">
@@ -207,9 +207,5 @@
             <a class="text-dark" href="https://www.ues.edu.sv/">Universidad de El Salvador</a>
         </div>
     </footer>
-
-    <script src="./recursos/bootstrap/js/bootstrap.min.js"></script>
-    <script src="./recursos/fontawesome/js/fontawesome.js"></script>
-    <script src="./recursos/bootstrap/css/bootstrap.min.css"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </html>
