--- a/app/vistas/clientes.html
+++ b/app/vistas/clientes.html
@@ -13,6 +13,12 @@
         .principal-div{
             background-color: #A4C7CD;
         }
+        .testimonial {
+            background-color: #f8f9fa;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
     </style>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-bs-theme="dark">
         <div class="container">
@@ -43,16 +49,37 @@
     </nav>   
     <script src="./header.js"></script>
     <br>
+  <div class="container my-5">
+    <h2 class="display-5">Testimonios de Nuestros Clientes</h2>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="testimonial">
+          <blockquote class="blockquote">
+            <p>"La atención médica y el cuidado que recibí en este hospital fueron excepcionales. Recomiendo encarecidamente sus servicios."</p>
+            <footer class="blockquote-footer">Juan Pérez</footer>
+          </blockquote>
+        </div>
+      </div>
+      <div class="col">
+        <div class="testimonial">
+          <blockquote class="blockquote">
+            <p>"El personal fue amable y atento en todo momento. Me sentí seguro y bien cuidado durante mi estancia."</p>
+            <footer class="blockquote-footer">María García</footer>
+          </blockquote>
+        </div>
+      </div>
+      <div class="col">
+        <div class="testimonial">
+          <blockquote class="blockquote">
+            <p>"Las instalaciones son modernas y limpias. Tuve una experiencia muy positiva y recomendaría este hospital a cualquiera."</p>
+            <footer class="blockquote-footer">Carlos Rodríguez</footer>
+          </blockquote>
+        </div>
+      </div>
+    </div>
+  </div>
+
     <br>
     <script src="./footer.js"></script>
 
