--- a/app/vistas/clientes.html
+++ b/app/vistas/clientes.html
@@ -49,6 +49,7 @@
     </nav>   
     <script src="./header.js"></script>
     <br>
+
   <div class="container my-5">
     <h2 class="display-5">Testimonios de Nuestros Clientes</h2>
     <br>
@@ -56,24 +57,33 @@
       <div class="col">
         <div class="testimonial">
           <blockquote class="blockquote">
+            <hr class="border border-primary border-2 opacity-75">
             <p>"La atención médica y el cuidado que recibí en este hospital fueron excepcionales. Recomiendo encarecidamente sus servicios."</p>
+            <br>
             <footer class="blockquote-footer">Juan Pérez</footer>
+            <hr class="border border-primary border-2 opacity-75">
           </blockquote>
         </div>
       </div>
       <div class="col">
         <div class="testimonial">
           <blockquote class="blockquote">
+            <hr class="border border-primary border-2 opacity-75">
             <p>"El personal fue amable y atento en todo momento. Me sentí seguro y bien cuidado durante mi estancia."</p>
+            <br>
             <footer class="blockquote-footer">María García</footer>
+            <hr class="border border-primary border-2 opacity-75">
           </blockquote>
         </div>
       </div>
       <div class="col">
         <div class="testimonial">
           <blockquote class="blockquote">
+            <hr class="border border-primary border-2 opacity-75">
             <p>"Las instalaciones son modernas y limpias. Tuve una experiencia muy positiva y recomendaría este hospital a cualquiera."</p>
+            <br>
             <footer class="blockquote-footer">Carlos Rodríguez</footer>
+            <hr class="border border-primary border-2 opacity-75">
           </blockquote>
         </div>
       </div>
