--- a/app/vistas/equipo.html
+++ b/app/vistas/equipo.html
@@ -6,13 +6,15 @@
     <title>Equipo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" href="../recursos/img/logoUes.png" />
-
 </head>
 <body>
     <style>
         .principal-div{
             background-color: #A4C7CD;
         }
+
+        .bg-morado{
+            background-color: #413C58;}
     </style>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-bs-theme="dark">
         <div class="container">
@@ -42,41 +44,166 @@
         </div>
     </nav>   
     <script src="./header.js"></script>
-    <div>
-        <h1 class ="ache">Nuestro Equipo</h1>
-        <br>
-        <h2 class="ache2">Máquina de electrocardiograma:</h2>
-        <p class="elpe">El corazón, al ser un órgano vital, es monitoreado constantemente para detectar anomalías en su frecuencia o ritmo. En esta tarea intervienen las máquinas ECG o el electrocardiógrafo, que capta y amplía los impulsos eléctricos del músculo cuando se colocan los electrodos
-            en cada una de las extremidades del paciente y sobre su zona torácica.</p>
-            <img src="../recursos/img/electro.jpeg" alt="electro" class="imagen">
 
-            <br>
-            <h2 class="ache2">Ultrasonido </h2>
-        <p class="elpe">Son equipos para imágenes diagnósticas que facilitan identificar anomalías internas, medir la densidad y la estructura de los órganos, observar los tejidos y vasos sanguíneos, entre otros factores que visibilizan una afección. 
-            Su uso no produce dolor en el paciente, tampoco genera radiación. </p>
-            <img src="../recursos/img/ultrasonido.jpeg" alt="ultrasonido" class="imagen">
+    <section class="container my-5">
+        <h1 class="text-center mb-4 display-4">Nuestro Equipo Profesional</h1>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="../recursos/img/doctors-1.jpg" class="img-fluid rounded-start" alt="Doctor 1">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Dr. John Doe</h5>
+                                <p class="card-text">Especialista en Cardiología</p>
+                                <p class="card-text">Experiencia: 10 años</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="../recursos/img/doctors-2.jpg" class="img-fluid rounded-start" alt="Doctor 1">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Dr. John Doe</h5>
+                                <p class="card-text">Especialista en Cardiología</p>
+                                <p class="card-text">Experiencia: 10 años</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="../recursos/img/doctors-3.jpg" class="img-fluid rounded-start" alt="Doctor 1">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Dr. John Doe</h5>
+                                <p class="card-text">Especialista en Cardiología</p>
+                                <p class="card-text">Experiencia: 10 años</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="../recursos/img/doctors-4.jpg" class="img-fluid rounded-start" alt="Doctor 1">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Dr. John Doe</h5>
+                                <p class="card-text">Especialista en Cardiología</p>
+                                <p class="card-text">Experiencia: 10 años</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="../recursos/img/doctors-2.jpg" class="img-fluid rounded-start" alt="Doctor 1">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Dr. John Doe</h5>
+                                <p class="card-text">Especialista en Cardiología</p>
+                                <p class="card-text">Experiencia: 10 años</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="../recursos/img/doctors-1.jpg" class="img-fluid rounded-start" alt="Doctor 1">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Dr. John Doe</h5>
+                                <p class="card-text">Especialista en Cardiología</p>
+                                <p class="card-text">Experiencia: 10 años</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <br>
 
-            <br>
-            <h2 class="ache2">Respirador artificial: </h2>
-        <p class="elpe">Su función es ayudar a un paciente a respirar, para ello, cuenta con un sistema que mueve el aire hacia dentro y fuera de los pulmones. 
-            Usualmente se emplean en la unidad de cuidados intensivos y las salas de emergencia.</p> 
-            <img src="../recursos/img/respirador.jpeg" alt="respirador artificial" class="imagen">
-            
-            <br>
-            <h2 class="ache2">Resonancia Magnetica: </h2>
-        <p class="elpe">La resonancia magnética es una técnica de obtención de imágenes médicas que utiliza un campo magnético y ondas de radio generadas por computadora para crear imágenes detalladas de los órganos y de los tejidos del cuerpo.</p> 
-        <img src="../recursos/img/resonancia.jpeg" alt="resonancia" class="imagen">
+    <div class="container-fluid text-center bg-morado">
+        <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-1.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/electro.jpeg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-2.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/ultrasonido.jpeg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-3.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/respirador.jpeg" class="img-fluid me-3" width="350" height="350">
+
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-4.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/resonancia.jpeg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-5.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-6.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+        </div>
     </div>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <script src="./footer.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
