--- a/app/vistas/somos.html
+++ b/app/vistas/somos.html
@@ -12,6 +12,12 @@
         .principal-div{
             background-color: #A4C7CD;
         }
+        .testimonial {
+            background-color: #f8f9fa;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
     </style>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-bs-theme="dark">
@@ -40,19 +46,51 @@
             </ul>
           </div>
         </div>
-      </nav>   
+    </nav>   
     <script src="./header.js"></script>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
+    <!-- Sección de historia del hospital -->
+    <section class="container my-5">
+        <div class="row align-items-center">
+            <div class="col-md-6 mb-4 mb-md-0">
+                <img src="../recursos/img/edificioHospital.jpg" class="img-fluid rounded" alt="Historia del Hospital">
+            </div>
+            <div class="col-md-6 text-start">
+                <h2 class="mb-4 display-5">Historia del Hospital</h2>
+                <p class="lead">El Hospital UES fue fundado en 1985 con el objetivo de brindar atención médica de calidad a la comunidad. A lo largo de los años, hemos crecido y evolucionado para adaptarnos a las necesidades cambiantes de nuestros pacientes.</p>
+                <p class="lead">Hoy en día, contamos con un equipo de profesionales altamente capacitados y equipos de vanguardia para ofrecer una amplia gama de servicios médicos. Nuestro compromiso con la excelencia en la atención al paciente es inquebrantable, y trabajamos incansablemente para mejorar continuamente nuestros servicios.</p>
+            </div>
+        </div>
+    </section>
+
+    <div class="container my-5">
+        <h2 class="display-5">Nuestros objetivos</h2>
+        <br>
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+          <div class="col">
+            <div class="testimonial">
+              <blockquote class="blockquote">
+                <h1 class="display-6">Mision</h1>
+                <hr class="border border-primary border-2 opacity-75">
+                <p>"Nuestra misión es promover la salud y la bienestar de los pacientes de la comunidad."</p>
+                <br>
+              </blockquote>
+            </div>
+          </div>
+          <div class="col">
+            <div class="testimonial">
+              <blockquote class="blockquote">
+                <h1 class="display-6">Vision</h1>
+                <hr class="border border-primary border-2 opacity-75">
+                <p>"Nuestra visión es ser un referente en la salud y bienestar de la comunidad."</p>
+                <br>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+    </div>
+
     <br>
     <script src="./footer.js"></script>
 
