cambie equipo.html y mejore lo que ya había hecho ademas de agregar descripciones a los doctores, ordenarlos ponerlos marcos a lS IMAGENES, poner fondo de texto mas llamativo agregue el footer que dice cada espcialidad

--- a/app/vistas/equipo.html
+++ b/app/vistas/equipo.html
@@ -6,6 +6,7 @@
     <title>Equipo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" href="../recursos/img/logoUes.png" />
+    <link rel="stylesheet" href="equipo.css">
 </head>
 <body>
     <style>
@@ -45,107 +46,207 @@
     </nav>   
     <script src="./header.js"></script>
 
+    <section class="intro py-5 text-center">
+        <div class="container">
+            <h1 class="display-4">Comprometidos con tu salud</h1>
+            <p class="lead">En el Hospital UES, estamos interesados en hacer las cosas con pasión y dedicación. Nuestro equipo profesional está aquí para brindarte la mejor atención posible, siempre enfocados en tu bienestar.</p>
+        </div>
+    </section>
+
     <section class="container my-5">
-        <h1 class="text-center mb-4 display-4">Nuestro Equipo Profesional</h1>
+        <h1 class="text-center mb-5 display-4">Nuestro Equipo Profesional</h1>
         <div class="row">
-            <div class="col-md-6">
-                <div class="card mb-3">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="../recursos/img/doctors-1.jpg" class="img-fluid rounded-start" alt="Doctor 1">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Dr. John Doe</h5>
-                                <p class="card-text">Especialista en Cardiología</p>
-                                <p class="card-text">Experiencia: 10 años</p>
-                            </div>
-                        </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="card border-0 shadow-sm">
+                    <img src="../recursos/img/doctors-1.jpg" class="rounded-circle border border-secondary" alt="Doctor 1">
+                    <div class="card-body bg-secondary">
+                        <h5 class=" text-light">Dr. Fernando Valdes</h5><br>
+                        <footer class="blockquote-footer text-dark">Cardiologo </footer>
+                        <p class="text-light">El Dr. Fernando Valdes, cardiólogo con 12 años de experiencia, dedicado a ofrecer atención cardiovascular de alta calidad. Su pasión por la medicina y el bienestar de sus pacientes lo convierten en un miembro clave del Hospital.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="card mb-3">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="../recursos/img/doctors-2.jpg" class="img-fluid rounded-start" alt="Doctor 1">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Dr. John Doe</h5>
-                                <p class="card-text">Especialista en Cardiología</p>
-                                <p class="card-text">Experiencia: 10 años</p>
-                            </div>
-                        </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="card border-0 shadow-sm">
+                    <img src="../recursos/img/doctors-2.jpg" class="rounded-circle border border-secondary" alt="Doctor 2">
+                    <div class="card-body bg-secondary">
+                        <h5 class=" text-light">Dra. Andrea Garcia</h5><br>
+                        <footer class="blockquote-footer text-dark">Pediatra </footer>
+                        <p class="text-light">La Dra. Andrea García, pediatra con 6 años de experiencia, se dedica a brindar atención infantil excepcional. Su pasión por la salud de los niños y su compromiso con el bienestar familiar la hacen fundamental en el equipo del Hospital UES.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="card mb-3">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="../recursos/img/doctors-3.jpg" class="img-fluid rounded-start" alt="Doctor 1">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Dr. John Doe</h5>
-                                <p class="card-text">Especialista en Cardiología</p>
-                                <p class="card-text">Experiencia: 10 años</p>
-                            </div>
-                        </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="card border-0 shadow-sm">
+                    <img src="../recursos/img/doctors-3.jpg" class="rounded-circle border border-secondary" alt="Doctor 3">
+                    <div class="card-body bg-secondary">
+                        <h5 class=" text-light">Dr. Chao Lin</h5><br>
+                        <footer class="blockquote-footer text-dark">internista </footer>
+                        <p class="text-light">El Dr. Chao Lin, internista con 4 años de experiencia, se dedica a proporcionar atención integral a adultos. Su enfoque holístico y su dedicación al bienestar de sus pacientes lo hacen indispensable en el equipo del Hospital UES.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="card mb-3">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="../recursos/img/doctors-4.jpg" class="img-fluid rounded-start" alt="Doctor 1">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Dr. John Doe</h5>
-                                <p class="card-text">Especialista en Cardiología</p>
-                                <p class="card-text">Experiencia: 10 años</p>
-                            </div>
-                        </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="card border-0 shadow-sm">
+                    <img src="../recursos/img/doctors-4.jpg" class="rounded-circle border border-secondary" alt="Doctor 4">
+                    <div class="card-body bg-secondary">
+                        <h5 class=" text-light">Dra. Mia Rosales</h5><br>
+                        <footer class="blockquote-footer text-dark">gastroenteróloga </footer>
+                        <p class="text-light">La Dra. Mia Rosales, gastroenteróloga con 8 años de experiencia, se especializa en el cuidado del sistema digestivo. Su dedicación y experiencia en tratamiento de enfermedades gastrointestinales la hacen esencial en el equipo del Hospital UES.</p>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card mb-3">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="../recursos/img/doctors-2.jpg" class="img-fluid rounded-start" alt="Doctor 1">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Dr. John Doe</h5>
-                                <p class="card-text">Especialista en Cardiología</p>
-                                <p class="card-text">Experiencia: 10 años</p>
-                            </div>
-                        </div>
+            </div>    
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="card border-0 shadow-sm">
+                    <img src="../recursos/img/ciru.png" class="rounded-circle border border-secondary" alt="Doctor 4">
+                    <div class="card-body bg-secondary">
+                        <h5 class=" text-light">Dr. Raúl Pérez</h5><br>
+                        <footer class="blockquote-footer text-dark">cirujano plástico  </footer>
+                        <p class="text-light">El Dr. Raúl Pérez, cirujano plástico con 10 años de experiencia, se dedica a ofrecer procedimientos estéticos y reconstructivos de alta calidad. Su precisión y pasión por mejorar la vida de sus pacientes lo destacan en el equipo del Hospital UES.</p>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card mb-3">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="../recursos/img/doctors-1.jpg" class="img-fluid rounded-start" alt="Doctor 1">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Dr. John Doe</h5>
-                                <p class="card-text">Especialista en Cardiología</p>
-                                <p class="card-text">Experiencia: 10 años</p>
-                            </div>
-                        </div>
+            </div>    
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="card border-0 shadow-sm">
+                    <img src="../recursos/img/onc.png" class="rounded-circle border border-secondary" alt="Doctor 4">
+                    <div class="card-body bg-secondary">
+                        <h5 class=" text-light">Dr. Leo Martínez</h5><br>
+                        <footer class="blockquote-footer text-dark">Especialista en Oncología </footer>
+                        <p class="text-light">El Dr. Leo Martínez, oncólogo con 12 años de experiencia, se especializa en el tratamiento del cáncer. Su compromiso con la investigación y el cuidado integral del paciente lo hacen un miembro valioso del Hospital UES.</p>
                     </div>
+                </div>
+            </div>    
+        </section>
+    <br>
+
+    <div class="container-fluid text-center bg-morado">
+        <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-1.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/electro.jpeg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-2.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/ultrasonido.jpeg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-3.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/respirador.jpeg" class="img-fluid me-3" width="350" height="350">
+
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-4.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/resonancia.jpeg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-5.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-6.jpg" class="img-fluid me-3" width="350" height="350">
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+    <script src="./footer.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+</body>
+</html>
+                    </div>
+                </div>
+            </div>    
+        </section>
+    <br>
+
+    <div class="container-fluid text-center bg-morado">
+        <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-1.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/electro.jpeg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-2.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/ultrasonido.jpeg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-3.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/respirador.jpeg" class="img-fluid me-3" width="350" height="350">
+
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-4.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/resonancia.jpeg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-5.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+            <div class="col">
+                <div class="p-3">
+                    <img src="../recursos/img/gallery-6.jpg" class="img-fluid me-3" width="350" height="350">
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="./footer.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+</body>
+</html>
+                    </div>
+                </div>
+            </div>    
+        </section>
     <br>
 
     <div class="container-fluid text-center bg-morado">
